[project]
name = "clu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.3.6",
    "llama-index>=0.11.14",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-llms-ollama>=0.3.3",
]

[tool.uv]
dev-dependencies = [
    "jupyter-core>=5.7.2",
    "nbconvert>=7.16.4",
    "ruff>=0.6.8",
]
